# crate_peek_mcp

./: README.md
.github/workflows/: ci.yml
crates/server/: Cargo.toml
crates/server/src/: lib.rs
