[package]
name = "crate-peek-server"
version = "0.1.0"
edition = "2024"

[dependencies]
crate-peek-core = {path = "../core"}
rmcp = { workspace = true, features = ["server", "transport-io"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
